--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
     "@nestjs/graphql": "^12.0.9",
+    "@nestjs/platform-express": "^10.1.3",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint-plugin": "16.9.1",
@@ -14,6 +17,8 @@
     "@nx/linter": "16.9.1",
     "@nx/nest": "^16.9.1",
     "@nx/workspace": "16.9.1",
+    "@release-it/bumper": "^5.1.0",
+    "@release-it/conventional-changelog": "^7.0.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -24,14 +29,12 @@
     "jest-environment-node": "^29.4.1",
     "nx": "16.9.1",
     "prettier": "^2.6.2",
+    "reflect-metadata": "^0.1.13",
+    "release-it": "^16.2.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
-    "verdaccio": "^5.0.4",
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/platform-express": "^10.1.3",
-    "reflect-metadata": "^0.1.13"
+    "verdaccio": "^5.0.4"
   },
   "dependencies": {
     "rxjs": "^7.8.0",
